# oryx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRADEMARKS.md  build.rs  plan.md  plan_entities.md  rust-toolchain.toml
.github/workflows/: release.yml
browser-extension/: IMPLEMENTATION_PLAN.md  README.md  install-native-host.sh
browser-extension/extension/: background.js  manifest.json
docs/: provider-config.md  validation-proposal.md
scripts/: bootstrap_windows_gnu_toolchain.sh  build_windows_gnu_exe.sh  release.sh
src/: app.rs  app_tests.rs  assets.rs  keybindings.rs  launch.rs  main.rs  model.rs  pathing.rs  progressive.rs  theme.rs  transfer.rs  url_media.rs
src/app/: browse.rs  controller.rs  open_url.rs  session_state.rs  text_input.rs  transfer_state.rs
src/app/browse/: discover.rs  library.rs  playback_context.rs  rows.rs
src/app/discover/: coordinator.rs  mod.rs
src/app/playback/: coordinator.rs  mod.rs  state.rs  view.rs
src/app/shell/: actions.rs  layout.rs  menu.rs  mod.rs  overlays.rs
src/app/ui/: auth.rs  mod.rs  modal.rs  notifications.rs  provider_link.rs  state.rs
src/audio/: clock.rs  mod.rs  worker.rs
src/audio/media/: macos.rs  mod.rs
src/metadata/: acoustid.rs  cover_art.rs  fingerprint.rs  mod.rs  model.rs  musicbrainz.rs  writeback.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/provider/: local.rs  mod.rs
src/provider/generic/: config.rs  listing.rs  loader.rs  mod.rs  provider.rs  search.rs  song.rs  tests.rs  util.rs
